--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 			<li><a href="misestudios.html">Mis Estudios</a></li>
 			<li><a href="miexperiencia.html">Mi Experiencia</a></li>
 			<li><a id="contacto"; href="contacto.html">Contacto</a></li>
+      <li><a href="index_1.html">Glosario</a></li>
+      <li><a href="tabla HTML1.2.htm">Normativa</a></li>
+      <li><a href="index_jerarquia.html">Jerarquia OSI</a></li>
 		</ul>
 	  </nav>
     <!-- Aquí inicia el código que estructura el CUERPO PRINCIPAL este MODULO del sistema -->
