--- a/contacto.html
+++ b/contacto.html
@@ -24,23 +24,27 @@
         alt="Foto HV"
         title="Foto Brandon" height="150">
         </figure>
-    <div id="titulo"> <!-- sector para el título HV -->
-      <p>Hoja de Vida</p>
-    </div>
 
-    <div id="subtitulo"> <!-- sector para el subtítulo HV -->
-      <p>Brandon Steven Pachon Giraldo</p>
-    </div>
+		<div id="titulo"> <!-- sector para el título HV -->
+			<p>Hoja de Vida</p>
+		</div>
 
-    </header>
-    <nav> <!-- Aquí empieza la definición del menú de navegación -->
-    <ul>
-      <li><a id="inicio"; href="index.html">Inicio</a></li>
-      <li><a href="misestudios.html">Mis Estudios</a></li>
-      <li><a href="miexperiencia.html">Mi Experiencia</a></li>
-      <li><a id="contacto"; href="contacto.html">Contacto</a></li>
-    </ul>
-    </nav>
+		<div id="subtitulo"> <!-- sector para el subtítulo HV -->
+			<p>Brandon Steven Pachon Giraldo</p>
+		</div>
+
+	  </header>
+	  <nav> <!-- Aquí empieza la definición del menú de navegación -->
+		<ul>
+			<li><a id="inicio"; href="index.html">Inicio</a></li>
+			<li><a href="misestudios.html">Mis Estudios</a></li>
+			<li><a href="miexperiencia.html">Mi Experiencia</a></li>
+			<li><a id="contacto"; href="contacto.html">Contacto</a></li>
+      <li><a href="index_1.html">Glosario</a></li>
+      <li><a href="tabla HTML1.2.htm">Normativa</a></li>
+      <li><a href="index_jerarquia.html">Jerarquia OSI</a></li>
+		</ul>
+	  </nav>
     <!-- Aquí inicia el código que estructura el CUERPO PRINCIPAL este MODULO del sistema -->
 
     <main>   <!-- definimos los contenidos agrupados en la etiqueta <main> -->
