--- a/miexperiencia.html
+++ b/miexperiencia.html
@@ -2,45 +2,49 @@
 <!DOCTYPE html>
 <html lang="es">
 	<head>
-    <title>Mi hoja de vida</title>		
-	  <PageMap>   
+	   <title>Mi hoja de vida</title>		
+	   <PageMap>   
     		<DataObject type="thumbnail">
       		<Attribute name="src" value="imagenes/zyro-image.png"/>		
       		<Attribute name="width" value="100"/>
       		<Attribute name="height" value="100"/>
     		</DataObject>
-  	</PageMap>	
-	  <meta name="description" content="Hoja de vida de Brandon Steven Pachon Giraldo. Tecnico logistico." />
-	  <meta charset="utf-8">
-	  <link rel="icon" href="imagenes/icono_web1.png" type="image/png" sizes="20x20">
-	  <link rel="stylesheet" type="text/css" href="css/style.css">
+  	 </PageMap>	
+	   <meta name="description" content="Hoja de vida de Brandon Steven Pachon Giraldo; tecnico en logistica empresarial" />
+	   <meta charset="utf-8">
+	   <link rel="icon" href="imagenes/pulpo_logo_sinfondo.png" type="image/png" sizes="20x20">
+	   <link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 
   <!--  Aquí inicia la definición de la Estructura general o CUERPO de la página WEB -->
 	<body>
-    <header>
+	  <header>
         <figure id="foto_hv">
         <img src="imagenes/zyro-image.png"
         alt="Foto HV"
         title="Foto Brandon" height="150">
         </figure>
 
-    <div id="titulo"> <!-- sector para el título HV -->
-      <p>Hoja de Vida</p>
-    </div>
+		<div id="titulo"> <!-- sector para el título HV -->
+			<p>Hoja de Vida</p>
+		</div>
 
-    <div id="subtitulo"> <!-- sector para el subtítulo HV -->
-      <p>Brandon Steven Pachon Giraldo</p>
-    </div>
+		<div id="subtitulo"> <!-- sector para el subtítulo HV -->
+			<p>Brandon Steven Pachon Giraldo</p>
+		</div>
 
-    </header>
-    <nav> <!-- Aquí empieza la definición del menú de navegación -->
-    <ul>
-      <li><a id="inicio"; href="index.html">Inicio</a></li>
-      <li><a href="misestudios.html">Mis Estudios</a></li>
-      <li><a href="miexperiencia.html">Mi Experiencia</a></li>
-      <li><a id="contacto"; href="contacto.html">Contacto</a></li>
-    </ul>
+	  </header>
+	  <nav> <!-- Aquí empieza la definición del menú de navegación -->
+		<ul>
+			<li><a id="inicio"; href="index.html">Inicio</a></li>
+			<li><a href="misestudios.html">Mis Estudios</a></li>
+			<li><a href="miexperiencia.html">Mi Experiencia</a></li>
+			<li><a id="contacto"; href="contacto.html">Contacto</a></li>
+      <li><a href="index_1.html">Glosario</a></li>
+      <li><a href="tabla HTML1.2.htm">Normativa</a></li>
+      <li><a href="index_jerarquia.html">Jerarquia OSI</a></li>
+		</ul>
+	  </nav>
     </nav>
     <!-- Aquí inicia el código que estructura el CUERPO PRINCIPAL este MODULO del sistema -->
 
